@@ -1,5 +1,9 @@
 # $Id$
 
+2007-06-29	Anton E. Lebedevich
+
+	*  main/Utils/TextUtils.class.php: normalizeUri added.
+
 2007-06-28	Ivan Y. Khvostishkov
 
 	* main/Utils/: ContentTypeHeader.class.php,
